# bastion

./: .gitignore  .leak-denylist.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  secrets.conf.example
bastion/: __init__.py  _tui_app.py  actions.py  cli.py  configspec.py  machine.conf.example  state.py  system.py  templates.py  tui.py  worldstate.py
bastion/layers/: __init__.py  base.py  l0_core.py  l1_feeds.py  l2_crowdsec.py  l3_ai.py  l4_dns_dhcp.py  l5_vpn.py  l6_monitoring.py
bastion/scripts/: bastion-recovery  edge-ai-analyze  edge-ai-backend-claude  edge-ai-backend-mock  edge-ai-collect  edge-ctl  edge-dnsblock-update  edge-feed-fetch  edge-reconciler  flowcheck  (+7 more)
docs/: commands.md  troubleshooting.md
tests/: test_actions.py  test_ai_backend.py  test_alerts.py  test_cli_ai.py  test_cli_check.py  test_cli_config.py  test_cli_findings.py  test_cli_layer_pkg.py  test_cli_layer_prereq.py  test_cli_snapshots.py  test_cli_switch.py  test_cli_verify_doctor.py  test_cli_wrappers.py  test_configspec.py  test_detect.py  test_dnsblock_formats.py  test_edge_ctl_killswitch.py  test_edge_ctl_proposals.py  test_edge_watchdog_failover.py  test_edge_watchdog_heal.py  test_feeds.py  test_generate.py  test_killswitch_lock.py  test_l0.py  test_l1.py  test_l2.py  test_l3.py  test_l4.py  test_l5.py  test_l6.py  test_net_rollback_scope.py  test_no_arch_leak.py  test_packaging.py  test_pkg.py  test_reconciler_v6.py  test_recovery_reaper.py  test_scripts_preflight.py  test_sprint1_hardening.py  test_sprint2_engine.py  test_state.py  (+7 more)
(+37 files in other folders)
