[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bastionfw"
version = "1.5.2"
description = "Modular, layered Linux firewall framework with an operator CLI, optional AI analysis layer, and an intelligent setup wizard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "indyfive11", email = "203553604+indyfive11@users.noreply.github.com" }]
keywords = ["firewall", "nftables", "security", "edge", "crowdsec"]
dependencies = [
    "textual>=0.60",
]

[project.optional-dependencies]
web = ["fastapi", "uvicorn"]
dev = ["pytest", "ruff"]

[project.scripts]
bastion = "bastion.cli:main"

[project.urls]
Homepage = "https://github.com/indyfive11/bastion"

[tool.setuptools.packages.find]
include = ["bastion*"]

[tool.setuptools.package-data]
# Operational scripts + config templates ship inside the wheel so an installed
# `bastion setup` can find them (resolved package-relative in cli.find_*_dir).
# templates/**/* is recursive so EVERY template subdir ships (systemd/, logrotate/, and any
# future one) — an explicit per-subdir list silently dropped templates/logrotate/* before. The
# test_packaging regression guard asserts this spec covers every file under scripts/ + templates/.
bastion = ["scripts/*", "templates/*", "templates/**/*", "machine.conf.example"]
